update new file

--- a/index.html
+++ b/index.html
@@ -155,14 +155,27 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                 <div class="col-12 col-lg-5">
-                    <h2 class="display-4 lh-1 mb-4">Enter a new age of web design</h2>
-                    <p class="lead fw-normal text-muted mb-5 mb-lg-0">This section is perfect for featuring some
-                        information about your application, why it was built, the problem it solves, or anything else!
-                        There's plenty of space for text here, so don't worry about writing too much.</p>
+                    <h2 class="display-4 lh-1 mb-4">Visi Dan Misi</h2>
+                    <br>
+                    <h3 class="display-6 lh-1 mb-4 font-alt">Visi</h3>
+                    <p class="lead fw-bold">"Mewujudkan masyarakat berjiwa patriot demi Indonesia yang aman dan damai."
+                    </p>
+                    <br>
+                    <br>
+                    <h3 class="display-6 lh-1 mb-4 font-alt">Misi</h3>
+                    <ul>
+                        <li class="lead fw-bold">Menyajikan berita aktual nengenai isu bela negara</li>
+                        <li class="lead fw-bold">Menyajikan materi pembelajaran berupa video dan teks yang interaktif
+                            serta menarik</li>
+                        <li class="lead fw-bold">Menyuguhkan game berkaitan bela negara untuk pembelajaran yang lebih
+                            menyenangkan</li>
+                        <li class="lead fw-bold">Mengapresiasi para "patriot" dengan memberikan reward berupa koin
+                            berhadiah</li>
+                    </ul>
                 </div>
                 <div class="col-sm-8 col-md-6">
-                    <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle"
-                            src="https://source.unsplash.com/u8Jn2rzYIps/900x900" alt="..." /></div>
+                    <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="assets/img/Visi.png"
+                            alt="..." /></div>
                 </div>
             </div>
         </div>
