--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/timeline.css" rel="stylesheet" />
 </head>
 <style>
     @font-face {
@@ -180,6 +181,72 @@
             </div>
         </div>
     </section>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="page-header">
+                <h1 class="text-center">Timeline</h1>
+            </div>
+            <ul class="timeline">
+                <li class="timeline-item">
+                    <div class="timeline-badge"><i class="glyphicon glyphicon-off"></i></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="timeline-title">Planning</h4>
+                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>September 2021</small>
+                            </p>
+                        </div>
+                        <div class="timeline-body">
+                            <p>Membuat Rencana/Plan Pembuatan Website Bela NegaraKu</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="timeline-item">
+                    <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="timeline-title">Analysis</h4>
+                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> September - October
+                                    2021</small></p>
+                        </div>
+                        <div class="timeline-body">
+                            <p>Menganalisis Website</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="timeline-item">
+                    <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="timeline-title">Design</h4>
+                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>October - November
+                                    2021</small></p>
+                        </div>
+                        <div class="timeline-body">
+                            <p></p>
+
+                        </div>
+                    </div>
+                </li>
+                <li class="timeline-item">
+                    <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="timeline-title">Mussum ipsum cacilds 4</h4>
+                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via
+                                    Twitter</small></p>
+                        </div>
+                        <div class="timeline-body">
+                            <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois
+                                divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis,
+                                nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta
+                                quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim.
+                                Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
     <!-- Call to action section-->
     <section class="cta">
         <div class="cta-content">
