--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
                             </p>
                         </div>
                         <div class="timeline-body">
-                            <p>Membuat Rencana/Plan Pembuatan Website Bela NegaraKu</p>
+                            <p>Kami mulai mengumpulkan ide-ide "gila" yang mendasari pembuatan web kami. Atas banyak
+                                pertimbangan, kami memilih BelaNegaraKu.</p>
                         </div>
                     </div>
                 </li>
@@ -209,7 +210,8 @@
                                     2021</small></p>
                         </div>
                         <div class="timeline-body">
-                            <p>Menganalisis Website</p>
+                            <p> Ide yang telah kami pilih kemudian kami analisis dengan membuat System Request,
+                                Feasibility Analysis, dan Project Charter-nya.</p>
                         </div>
                     </div>
                 </li>
@@ -222,7 +224,9 @@
                                     2021</small></p>
                         </div>
                         <div class="timeline-body">
-                            <p></p>
+                            <p>Kemudian kami tindak lanjuti dengan membuat desain Class Diagram, Deployment Diagram, UI
+                                Model, dan juga Data Modelnya. Tak lupa kami juga membuat wireframe beserta
+                                prototype-nya.</p>
 
                         </div>
                     </div>
@@ -231,16 +235,13 @@
                     <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4 class="timeline-title">Mussum ipsum cacilds 4</h4>
-                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via
-                                    Twitter</small></p>
+                            <h4 class="timeline-title">Implementation</h4>
+                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>November - Desember
+                                    2021</small></p>
                         </div>
                         <div class="timeline-body">
-                            <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois
-                                divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis,
-                                nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta
-                                quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim.
-                                Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                            <p>Desain yang telah kami buat kemudian kami implementasikan menjadi sebuah website yang
+                                dimana kami membuat nya menggunakan HTML dan juga CSS</p>
                         </div>
                     </div>
                 </li>
