--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                     2021</small></p>
                         </div>
                         <div class="timeline-body">
-                            <p> Ide yang telah kami pilih kemudian kami analisis dengan membuat System Request,
+                            <p>Ide yang telah kami pilih kemudian kami analisis dengan membuat System Request,
                                 Feasibility Analysis, dan Project Charter-nya.</p>
                         </div>
                     </div>
@@ -227,7 +227,6 @@
                             <p>Kemudian kami tindak lanjuti dengan membuat desain Class Diagram, Deployment Diagram, UI
                                 Model, dan juga Data Modelnya. Tak lupa kami juga membuat wireframe beserta
                                 prototype-nya.</p>
-
                         </div>
                     </div>
                 </li>
@@ -241,7 +240,8 @@
                         </div>
                         <div class="timeline-body">
                             <p>Desain yang telah kami buat kemudian kami implementasikan menjadi sebuah website yang
-                                dimana kami membuat nya menggunakan HTML dan juga CSS</p>
+                                dimana kami membuat nya menggunakan HTML dan CSS dengan bantuan framework css yaitu
+                                Bootstrap agar membuat tampilan website kami lebih bagus dan lebih keren </p>
                         </div>
                     </div>
                 </li>
