--- a/index.html
+++ b/index.html
@@ -252,25 +252,24 @@
     <!-- Call to action section-->
     <h1 class="text-center">Our Feature</h1>
     <div class="container px-5">
-        <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false"
-            data-bs-interval="false">
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="assets/img/Feature1.jpeg" style="height:688.167px" class="d-block w-100" alt="...">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="assets/img/Feature1.jpeg" class="d-block w-100" style="height:688.167px" alt="...">
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="assets/img/Feature2.jpeg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/Feature3.jpeg" style="height:688.167px" class="d-block w-100" alt="...">
+                    <img src="assets/img/Feature3.jpeg" class="d-block w-100" alt="..." style="height:688.167px">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
                 data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
